fixed h4 spacing in quote

--- a/src/styles/scss/_project.scss
+++ b/src/styles/scss/_project.scss
@@ -74,6 +74,10 @@ $item-bottom-margin: 40px;
 
     h4 {
       font-size: 1.1em;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
 
     ul, ol {
